--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </head>
    
-    <body style="background-color: pink;">
+    <body style="background-color: #59C1BD;">
         <table cellspacing="20">
             <tr>
                 <td><img src="my photo 1-modified.png"alt= "Mariana Kıziltepe"></td>
