--- a/my contacts.html
+++ b/my contacts.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title> ❤️ Mariana's contacts</title>
     </head>
-    <body>
+    <body style="background-color: #59C1BD;">
         <h1> <strong> My contacts</strong></h1>
         <hr size = "3" noshade>
         <p> ☎️ <strong>PHONE:</strong> +905374909573</p>
